# altqq

./: .pre-commit-config.yaml  CHANGELOG.md  CNAME  LICENSE  README.md  mkdocs.yml  pyproject.toml  stable  versions.json
.github/workflows/: qa.yml  release.yml
0.0.1a/: 404.html  index.html  sitemap.xml
0.0.1a/api/: index.html
docs/: api.md  rationale.md  user-guide.md
src/altqq/: __init__.py  structs.py  translator.py  types.py  typing.py
src/altqq/translators/: __init__.py  common.py  mysql.py  plain_text.py  psycopg.py  pyodbc.py
tests/: queries.py  test_query.py  test_translation.py  utils.py
v0.0.1/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.1/api/: index.html
v0.0.1a2/: 404.html  index.html  sitemap.xml
v0.0.1a2/api/: index.html
v0.0.1a2/search/: search_index.json
v0.0.2/: 404.html  index.html  sitemap.xml
v0.0.2/api/: index.html
v0.0.2/search/: search_index.json
v0.0.3/: 404.html  index.html  sitemap.xml
v0.0.3/api/: index.html
v0.0.3/changelog/: index.html
v0.0.3/rationale/: index.html
v0.0.3/search/: search_index.json
v0.0.3/user-guide/: index.html
v0.0.4/: 404.html  index.html  sitemap.xml
v0.0.4/api/: index.html
v0.0.4/changelog/: index.html
v0.0.4/rationale/: index.html
v0.0.4/search/: search_index.json
v0.0.4/user-guide/: index.html
v0.0.5/: 404.html  index.html  objects.inv  sitemap.xml
v0.0.5/api/: index.html
v0.0.5/changelog/: index.html
v0.0.5/rationale/: index.html
v0.0.5/search/: search_index.json
v0.0.5/user-guide/: index.html
v0.0.6/: 404.html  index.html  sitemap.xml
v0.0.6/api/: index.html
v0.0.6/changelog/: index.html
v0.0.6/rationale/: index.html
v0.0.6/search/: search_index.json
v0.0.6/user-guide/: index.html
v0.0.7/: 404.html  index.html  sitemap.xml
v0.0.7/api/: index.html
v0.0.7/changelog/: index.html
v0.0.7/rationale/: index.html
v0.0.7/search/: search_index.json
v0.0.7/user-guide/: index.html
v0.0.8/: 404.html  CNAME  index.html  sitemap.xml
v0.0.8/api/: index.html
v0.0.8/changelog/: index.html
v0.0.8/rationale/: index.html
v0.0.8/search/: search_index.json
v0.0.8/user-guide/: index.html
v0.0.9/: 404.html  index.html  sitemap.xml
v0.0.9/api/: index.html
v0.0.9/changelog/: index.html
v0.0.9/rationale/: index.html
v0.0.9/search/: search_index.json
v0.0.9/user-guide/: index.html
