[tool.pyright]
include = ["src"]
strict = ["src"]

[tool.ruff.lint]
select = ["E4", "E7", "E9", "F", "I", "D"]
ignore = ["D107"]

[tool.ruff.lint.pydocstyle]
convention = "google"

[tool.poetry]
name = "altqq"
version = "0.0.1a1"
description = "Alternative Queries: Typed and Composable Tool for Handwritten SQL"
authors = ["baluyotraf <baluyotraf@outlook.com>"]
maintainers = ["baluyotraf <baluyotraf@outlook.com>"]
license = "MIT"
readme = "README.md"
repository = "https://github.com/baluyotraf/altqq"
homepage = "https://altqq.baluyotraf.com"
keywords = ["database", "SQL"]

[tool.poetry.dependencies]
python = "^3.9"
pydantic = "^2.6.4"

[tool.poetry.group.dev.dependencies]
pyright = "^1.1.354"

[tool.poetry.group.docs]
optional = true

[tool.poetry.group.docs.dependencies]
mike = "^2.0.0"
mkdocs = "^1.5.3"
mkdocstrings = { version="^0.24.1", extras = ["python"] }
mkdocs-include-markdown-plugin = "^6.0.4"
mkdocs-material = { version = "^9.5.14", extras = ["imaging"] }

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
